...
                                    <constraint firstAttribute="height" constant="50" id="pI7-Mq-mPN"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="emG-xq-vw3">
                                <rect key="frame" x="30" y="557" width="354" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="q7x-0V-mc3"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="40" y="619" width="334" height="50"/>
                                <color key="backgroundColor" red="0.82621127367019653" green="0.95698553323745728" blue="0.94608205556869507" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="oeR-tf-Jlf"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="LOGIN"/>
                                <connections>
                                    <action selector="btnLogihn:" destination="Z6B-ra-QOD" eventType="touchUpInside" id="vuO-PP-vGF"/>
                                    <segue destination="g2f-Tq-p3W" kind="show" identifier="MainNav" id="fa3-OE-UCu"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bDD-ds-4wc">
...
                                    <constraint firstAttribute="height" constant="40" id="ddu-Od-jq5"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="af8-n5-yAY">
                                <rect key="frame" x="30" y="499" width="354" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="j7R-B6-zkj"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
